<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:contentDescription="@string/welcome_image"
            app:srcCompat="@drawable/add_notes_amico" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/product_sans_regular"
            android:gravity="center"
            android:text="@string/hi"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="74dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/product_sans_regular"
            android:gravity="start"
            android:text="@string/the_rapidity_to_which_we_humans_forget_is_astonishing"
            android:textSize="19sp" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/continue_button"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_corner"
            android:fontFamily="@font/product_sans_regular"
            android:text="@string/continue_button" />


    </FrameLayout>


</layout>