<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/action_bar_bg"
            android:elevation="2dp"
            app:navigationIcon="@drawable/ic_arrow_back_black_24dp"
            app:title="@string/update_note"
            app:titleTextAppearance="@style/ActionBarText">

            <ImageView
                android:id="@+id/deleteNote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_delete" />

        </androidx.appcompat.widget.Toolbar>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="start"
            android:layout_marginStart="16dp"
            android:elevation="-2dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rounded_corner"
            android:fontFamily="@font/product_sans_regular"
            android:hint="@string/title"
            android:inputType="textShortMessage|textCapSentences|textAutoCorrect"
            android:paddingStart="10dp"
            android:paddingEnd="10dp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_corner"
            android:fontFamily="@font/product_sans_regular"
            android:gravity="start"
            android:hint="@string/description"
            android:inputType="textLongMessage|textAutoCorrect|textMultiLine|textCapSentences|textImeMultiLine"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_note_button"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/save_note" />

    </LinearLayout>

</layout>
